added user methods
